Simplifying asserts